--- a/css/style.css
+++ b/css/style.css
@@ -31,14 +31,14 @@ img:hover {
 
 li {
     font-size: 16px;
-    font-family: Georgia, 'Times New Roman', Times, serif;
+    font-family: Helvetica, Arial, sans-serif;
     font font-weight: 500px;
     color: #333;
 }
 
 p {
     font-size: 16px;
-    font-family: Georgia, 'Times New Roman', Times, serif;
+    font-family: Helvetica, Arial, sans-serif;
     font font-weight: 500px;
     color: #333;
 }
